--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -6,86 +6,85 @@
     <string name="open_source_projects_used">Projek Open Source</string>
     <string name="privacy_policy_title">Polisi Privasi</string>
     <string name="license_summary">GNU General Public License v3</string>
-    <string name="start_accept_privacy_policy">Afin de se conformer au Règlement Général sur la Protection des Données (RGPD), nous attirons votre attention sur la politique de confidentialité de Five Prayers Android. Veuillez la lire attentivement.
-\nVous devez l’accepter pour nous envoyer le rapport de bogue.</string>
-    <string name="read_privacy_policy">Lire la politique de confidentialité</string>
-    <string name="sorry_string">Désolé, une erreur est survenue.</string>
-    <string name="what_happened_headline">Ce qui s’est passé :</string>
-    <string name="info_labels">Langue de l’application:\\nDate UTC:\\nPaquet:\\nVersion:\\nVersion du SE:</string>
-    <string name="what_device_headline">Information :</string>
-    <string name="error_details_headline">Détails :</string>
-    <string name="your_comment">Votre commentaire (en anglais) :</string>
-    <string name="error_report_button_text">Signaler cette erreur par courriel</string>
-    <string name="error_report_open_github_notice">Veuillez vérifier si un ticket concernant votre problème existe déjà. Lorsque vous créez des tickets dupliqués, cela nous prend du temps que nous pourrions passer à résoudre effectivement le problème.</string>
-    <string name="copy_for_github">Copier le rapport formaté</string>
-    <string name="error_report_open_issue_button_text">Signaler sur GitHub</string>
-    <string name="msg_copied">Copié dans le presse-papiers</string>
-    <string name="share_dialog_title">Partager avec</string>
-    <string name="permission_denied">Action refusée par le système</string>
+    <string name="start_accept_privacy_policy">Demi mematuhi General Data Protection Regulation (GDPR), kami memerlukan perhatian anda kepada polisi privasi Five Prayers Android. Sila baca dengan teliti. \nAnda perlu menerima polisi untuk menghantar laporan bugs kepada kami</string>
+    <string name="read_privacy_policy">Baca Polisi Privasi</string>
+    <string name="sorry_string">Maaf, terdapat ralat telah berlaku</string>
+    <string name="what_happened_headline">Apa yang berlaku :</string>
+    <string name="info_labels">Bahasa Aplikasi:\\nTarikh UTC:\\nPakej:\\nVersi:\\nVersi OS:</string>
+    <string name="what_device_headline">Informasi :</string>
+    <string name="error_details_headline">Butiran :</string>
+    <string name="your_comment">Komen anda :</string>
+    <string name="error_report_button_text">Laporkan ralat ini guna e-mel</string>
+    <string name="error_report_open_github_notice">Sila semak sekiranya tiket mengenai isu anda sudah ada. Jika terdapat tiket yang sama, kami akan memerlukan masa untuk menyelesaikan isu yang telah dibangkit.</string>
+    <string name="copy_for_github">Salin format laporan</string>
+    <string name="error_report_open_issue_button_text">Isyarat di GitHub</string>
+    <string name="msg_copied">Disalin di clipboard</string>
+    <string name="share_dialog_title">Kongsi</string>
+    <string name="permission_denied">Tindakan dinafikan oleh sistem</string>
 
-    <string name="common.accept">Accepter</string>
-    <string name="common.decline">Décliner</string>
-    <string name="common.cancel">Annuler</string>
+    <string name="common.accept">Terima</string>
+    <string name="common.decline">Tolak</string>
+    <string name="common.cancel">Batal</string>
     <string name="common.ok">OK</string>
-    <string name="common.error">Erreur</string>
-    <string name="common_alert">Alerte</string>
-    <string name="common_page">Page</string>
-    <string name="common.loading">Chargement en cours …</string>
-    <string name="common.sunrise">Lever du soleil</string>
-    <string name="common.sunset">Coucher du soleil</string>
-    <string name="common.close">Fermer</string>
-    <string name="common.license">Licence</string>
-    <string name="common.offline">Hors ligne</string>
-    <string name="common.minutes">minutes</string>
+    <string name="common.error">Ralat / Error</string>
+    <string name="common_alert">Amaran</string>
+    <string name="common_page">Laman</string>
+    <string name="common.loading">Loading …</string>
+    <string name="common.sunrise">Matahari Terbit</string>
+    <string name="common.sunset">Matahari Terbenam</string>
+    <string name="common.close">Tutup</string>
+    <string name="common.license">Lesen</string>
+    <string name="common.offline">Luar Talian</string>
+    <string name="common.minutes">minit</string>
     <string name="common.hours.separator">h</string>
     <string name="common.minutes.separator">m</string>
-    <string name="common.in">dans</string>
-    <string name="common.at">à</string>
-    <string name="common.from">depuis</string>
-    <string name="common.to">jusqu\'au</string>
-    <string name="common.ayah">verset</string>
-    <string name="common.day">Jour</string>
-    <string name="common.update">Mise à jour</string>
-    <string name="common.startdate">Date de début</string>
-    <string name="common.once_in_four_month">Une fois dans quatre mois</string>
-    <string name="common.once_in_two_month">Une fois dans deux mois</string>
-    <string name="common.once_a_month">Une fois par mois</string>
-    <string name="common.once_in_three_weeks">Une fois toutes les trois semaines</string>
-    <string name="common.twice_a_month">Deux fois par mois</string>
-    <string name="common.three_times_a_month">Trois fois par mois</string>
-    <string name="common.four_times_a_month">Quatre fois par mois</string>
+    <string name="common.in">dalam</string>
+    <string name="common.at">di</string>
+    <string name="common.from">dari</string>
+    <string name="common.to">hingga</string>
+    <string name="common.ayah">ayat</string>
+    <string name="common.day">Hari</string>
+    <string name="common.update">Kemaskini</string>
+    <string name="common.startdate">Tarikh mula</string>
+    <string name="common.once_in_four_month">Empat bulan sekali</string>
+    <string name="common.once_in_two_month">Dua bulan sekali</string>
+    <string name="common.once_a_month">Sebulan sekali</string>
+    <string name="common.once_in_three_weeks">Tiga minggu sekali</string>
+    <string name="common.twice_a_month">Sebulan dua kali</string>
+    <string name="common.three_times_a_month">Sebulan tiga kali</string>
+    <string name="common.four_times_a_month">Sebulan empat kali</string>
 
-    <string name="location_alert_title">Erreur de localisation</string>
-    <string name="location_alert_settings_button_title">Activer la localisation</string>
-    <string name="location_alert_manual_position_button_title">Définir l\'emplacement manuellement</string>
+    <string name="location_alert_title">Ralat lokasi</string>
+    <string name="location_alert_settings_button_title">Aktifkan lokasi</string>
+    <string name="location_alert_manual_position_button_title">Tetapkan lokasi secara manual</string>
 
-    <string name="app_name">Cinq Prières</string>
-    <string name="title_home">Prières</string>
-    <string name="title_dashboard">Services</string>
-    <string name="title_settings">Paramètres</string>
-    <string name="label.unknown_location">Localisation inconnue</string>
+    <string name="app_name">Lima Waktu</string>
+    <string name="title_home">Solat</string>
+    <string name="title_dashboard">Servis</string>
+    <string name="title_settings">Parameter</string>
+    <string name="label.unknown_location">Lokasi tidak diketahui</string>
 
     <!-- Widgets -->
-    <string name="simple_widget_description">Widget Simple</string>
-    <string name="clock_widget_description">Widget avec horloge</string>
-    <string name="next_prayer_widget_description">Widget avec prière suivante</string>
+    <string name="simple_widget_description">Widget biasa</string>
+    <string name="clock_widget_description">Widget jam</string>
+    <string name="next_prayer_widget_description">Widget waktu solat seterusnya</string>
 
     <!-- App Theme preferences -->
-    <string name="theme_preference_section">Apparence</string>
-    <string name="theme_preference_title">Thème</string>
-    <string name="theme_preference_dialog_title">Choisissez votre thème préféré</string>
-    <string name="theme_preference_name_white_blue">Ciel bleu (par défaut)</string>
-    <string name="theme_preference_name_dark_orange">Nuit orange</string>
-    <string name="theme_preference_name_dark_Turquoise">Aurore nocturne</string>
-    <string name="theme_preference_use_arabic_locale">Mode arabe (الوضع العربي)</string>
-    <string name="theme_preference_use_arabic_locale_summay">L\'application sera traduite en arabe</string>
-    <string name="theme_preference_numerals_title">Type de chiffres</string>
-    <string name="theme_preference_numerals_dialog_title">Choisissez le type de chiffres</string>
-    <string name="theme_preference_numerals_type_arabic_indic">Chiffres arabes-indiens</string>
-    <string name="theme_preference_numerals_type_arabic">Chiffres arabes</string>
+    <string name="theme_preference_section">Penampilan</string>
+    <string name="theme_preference_title">Tema</string>
+    <string name="theme_preference_dialog_title">Pilih tema kegemaran anda</string>
+    <string name="theme_preference_name_white_blue">Langit Biru (default)</string>
+    <string name="theme_preference_name_dark_orange">Malam Oyen</string>
+    <string name="theme_preference_name_dark_Turquoise">Aurora petang</string>
+    <string name="theme_preference_use_arabic_locale">Mod Arab (الوضع العربي)</string>
+    <string name="theme_preference_use_arabic_locale_summay">Aplikasi akan diterjemahkan kepada Bahasa Arab</string>
+    <string name="theme_preference_numerals_title">Jenis nombor</string>
+    <string name="theme_preference_numerals_dialog_title">Pilih jenis digit nombor</string>
+    <string name="theme_preference_numerals_type_arabic_indic">Angka Arab-India</string>
+    <string name="theme_preference_numerals_type_arabic">Angka Arab</string>
 
-    <string name="calendar_view_title">Calendrier de prière à</string>
-    <string name="title_calendar">Calendrier de prière</string>
+    <string name="calendar_view_title">Kalendar solat di</string>
+    <string name="title_calendar">Kalendar Solat</string>
     <string name="desc_calendar_view_title">Table mensuelle de prière</string>
 
     <string name="last_update_time_key">last_update_time_key</string>
