--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -256,25 +256,25 @@
     <string name="preference_add_new_adhan">Tambah fail Azan baru</string>
     <string name="preference_unable_add_new_adhan">Tidak dapat menambah fail Azan baru</string>
 
-    <string name="title_silenter_preference_section">Silent Mode</string>
-    <string name="text_silenter_preference_section">Turn phone on \'do not disturb\' state during prayer times</string>
-    <string name="error_summary_silenter_preference_section">The application is not allowed to change to \'Do Not Disturb\' state</string>
-    <string name="title_silenter_start_time">Start time after Adhan (in minutes)</string>
-    <string name="dialog_title_silenter_start_time">Start time</string>
-    <string name="title_silenter_duration">Duration (in minutes)</string>
-    <string name="title_silenter_duration_friday_prayer">Duration for Friday prayer (in minutes)</string>
-    <string name="dialog_title_silenter_duration">Duration</string>
+    <string name="title_silenter_preference_section">Mod Senyap</string>
+    <string name="text_silenter_preference_section">Set telefon ke \'Mod Senyap\' ketika waktu solat</string>
+    <string name="error_summary_silenter_preference_section">Aplikasi ini tidak dapat untuk set ke \'Mod Senyap\' </string>
+    <string name="title_silenter_start_time">Waktu mula selepas Azan (minit)</string>
+    <string name="dialog_title_silenter_start_time">Waktu bermula</string>
+    <string name="title_silenter_duration">Masa (minit)</string>
+    <string name="title_silenter_duration_friday_prayer">Masa diambil untuk Solat Jumaat (minit)</string>
+    <string name="dialog_title_silenter_duration">Masa diambil</string>
 
-    <string name="title_daily_verse_preference">Enable daily verses</string>
+    <string name="title_daily_verse_preference">Bacaan Harian</string>
 
-    <string name="latitude_adjustment_method_middle_of_the_night">Middle of the Night</string>
+    <string name="latitude_adjustment_method_middle_of_the_night">Pertengahan malam</string>
     <string name="latitude_adjustment_method_one_seventh">One Seventh</string>
     <string name="latitude_adjustment_method_angle_based">Angle Based</string>
     <string name="title_latitude_adjustment_method">Adjusting times in higher latitudes</string>
-    <string name="dialog_title_latitude_adjustment_method">Choose a method</string>
-    <string name="calendar">Calendar</string>
-    <string name="gregorian_hijri_calendar">Gregorian/Hijri Calendar</string>
-    <string name="desc_gregorian_hijri_calendar">Hijri dates and Holidays</string>
+    <string name="dialog_title_latitude_adjustment_method">Pilih cara kiraan latitud</string>
+    <string name="calendar">Kalendar</string>
+    <string name="gregorian_hijri_calendar">Kalendar Hijrah/Gregorian</string>
+    <string name="desc_gregorian_hijri_calendar">Tarikh Hijrah and Cuti</string>
     <string name="title_hijri_day_adjustment_preference">Hijri date adjustment</string>
     <string name="dialog_title_hijri_day_adjustment_preference">Adjust Hijri date</string>
 
