Update strings.xml Names of Allah 14 progress 70% - Bahasa Malaysia

--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -341,44 +341,44 @@
     <string name="desc_quran">Baca Al-Quran</string>
     <string name="title_checkbox_quran_night_mode">Mod Malam</string>
     <string name="title_notification_section">Notifikasi</string>
-    <string name="dialog_title_fajr_adhan">Select Fajr Adhan</string>
-    <string name="dialog_title_adhan">Select Adhan</string>
+    <string name="dialog_title_fajr_adhan">Pilih Azan Subuh</string>
+    <string name="dialog_title_adhan">Pilih Azan</string>
 
     <string name="adhan_abdelbasset_abdessamad">Abdelbasset Abdessamad</string>
     <string name="adhan_al_haram_el_madani">Al Haram Al Madani</string>
     <string name="adhan_meshary_al_fasy">Mishary Rashid Al-Afasy</string>
     <string name="adhan_omar_al_kazabri">Omar Al Kazabri</string>
     <string name="adhan_riad_al_djazairi">Riad Al Djazairi</string>
-    <string name="short_prayer_call">Short Call (no Adhan)</string>
-    <string name="takbeer_only_call">Takbeer only</string>
+    <string name="short_prayer_call">Azan Pendek</string>
+    <string name="takbeer_only_call">Takbir Sahaja</string>
     <string name="adhan_manssour_el_zahrani">Manssour El Zahrani</string>
     <string name="adhan_nurdin_al_haddiwi_fajr_morocco">Nurdin Al Haddiwi</string>
     <string name="adhan_nurdin_hamza_al_maghriby">Nurdin Al Maghriby (Al Quds)</string>
     <string name="adhan_sayed_al_nakshabandi">Sayed Al Nakshabandi</string>
 
-    <string name="title_adhan_fajr">Fajr Adhan</string>
-    <string name="title_adhan_rest_prayers">Adhan of other prayers</string>
-    <string name="title_adhan">Adhan</string>
-    <string name="title_adhan_volume">Adhan Volume</string>
+    <string name="title_adhan_fajr">Azan Subuh</string>
+    <string name="title_adhan_rest_prayers">Azan Solat lain</string>
+    <string name="title_adhan">Azan</string>
+    <string name="title_adhan_volume">Volume Azan</string>
 
-    <string name="names_view_title">Beautiful Names of God</string>
-    <string name="ndesc_ames_view_title">99 Names of God</string>
+    <string name="names_view_title">Nama-nama Allah yang Indah</string>
+    <string name="ndesc_ames_view_title">99 Nama Allah</string>
 
     <string name="ALLAH_NAME_0">The One and The True God</string>
-    <string name="ALLAH_NAME_1">The Entirely Merciful</string>
-    <string name="ALLAH_NAME_2">The Bestower of Mercy</string>
-    <string name="ALLAH_NAME_3">The King and Owner of Dominion</string>
-    <string name="ALLAH_NAME_4">The Absolutely Pure</string>
-    <string name="ALLAH_NAME_5">The Perfection and Giver of Peace</string>
-    <string name="ALLAH_NAME_6">The One Who gives Emaan and Security</string>
-    <string name="ALLAH_NAME_7">The Guardian, The Witness, The Overseer</string>
-    <string name="ALLAH_NAME_8">The All Mighty</string>
-    <string name="ALLAH_NAME_9">The Compeller, The Restorer</string>
-    <string name="ALLAH_NAME_10">The Supreme, The Majestic</string>
-    <string name="ALLAH_NAME_11">The Creator, The Maker</string>
-    <string name="ALLAH_NAME_12">The Originator</string>
-    <string name="ALLAH_NAME_13">The Fashioner</string>
-    <string name="ALLAH_NAME_14">The All- and Oft-Forgiving</string>
+    <string name="ALLAH_NAME_1">Yang Maha Pengasih</string>
+    <string name="ALLAH_NAME_2">Yang Maha Penyayang</string>
+    <string name="ALLAH_NAME_3">Yang Maha Merajai/Memerintah</string>
+    <string name="ALLAH_NAME_4">Yang Maha Suci</string>
+    <string name="ALLAH_NAME_5">Maha Memberi Kesejahteraan</string>
+    <string name="ALLAH_NAME_6">Maha Memberi Keamanan</string>
+    <string name="ALLAH_NAME_7">Yang Maha Pemelihara</string>
+    <string name="ALLAH_NAME_8">Yang Maha Gagah</string>
+    <string name="ALLAH_NAME_9">Maha Perkasa</string>
+    <string name="ALLAH_NAME_10">Maha Megah, Yang Memiliki Kebesaran</string>
+    <string name="ALLAH_NAME_11">Maha Pencipta</string>
+    <string name="ALLAH_NAME_12">Yang Maha Melepaskan (Membuat, Membentuk, Menyimbangkan)</string>
+    <string name="ALLAH_NAME_13">Yang Membentuk Rupa (makhluknya)</string>
+    <string name="ALLAH_NAME_14">Maha Pengampun</string>
     <string name="ALLAH_NAME_15">The Subduer, The Ever-Dominating</string>
     <string name="ALLAH_NAME_16">The Giver of Gifts</string>
     <string name="ALLAH_NAME_17">The Provider</string>
